--- a/publications.html
+++ b/publications.html
@@ -8,7 +8,7 @@ title: Publications
             <h4 class="text-center">Publications</h4>
             <table class="table table-bordered table-striped">
                 <tbody>
-                    <tr><td>Kirkland, A., & <b>Gordon, M.</b> (forthcoming). A visual workflow for cataloging. In <i>Universal Design for Learning in academic libraries: Theory into practice</i>. Association of College and Research Libraries.</td></tr>
+                    <tr><td>Kirkland, Arden, and <b>Minor Gordon</b>. "A Visual Workflow for Cataloging." <i>Universal Design for Learning in Academic Libraries: Theory into Practice</i>, edited by Danielle Skaggs and Rachel M. McMullin, Association of College & Research Libraries, 2024, pp. 207-24.</td></tr>
                     <tr><td>Shirai, S., Seneviratne, O., <b>Gordon, M.</b>, Chen, C., McGuinness, D. (2021 January). <a href="https://www.frontiersin.org/articles/10.3389/frai.2020.621766/full">Identifying Ingredient Substitutions Using a Knowledge Graph of Food</a>. In <i>Frontiers in Artificial Intelligence: AI in Food, Agriculture and Water</i>.</td></tr>
                     <tr><td>Santos, H., Mulvehill, A., Erickson, J. S., McCusker, J. P., <b>Gordon, M.</b>, Xie, O., ... & Berlinsky, A. (2020, November). <a href="https://link.springer.com/chapter/10.1007/978-3-030-62466-8_30">A Semantic Framework for Enabling Radio Spectrum Policy Management and Evaluation</a>. In <i>International Semantic Web Conference</i> (pp. 482-498). Springer, Cham.</td></tr>
                     <tr><td><b>Gordon, M.</b> (2010). <a href="https://www.cl.cam.ac.uk/techreports/UCAM-CL-TR-781.pdf">Stage scheduling for CPU-intensive servers (No. UCAM-CL-TR-781)</a>. University of Cambridge, Computer Laboratory.</td></tr>
