--- a/index.html
+++ b/index.html
@@ -11,36 +11,44 @@ title: Home
             </div>
         </div>
         <div class="col-xl-6 col-xs-12 d-flex flex-column justify-content-center text-center">
-            <figure>
-                <img src="{{ "/img/index/mg4-jfg.jpg" | prepend: site.baseurl }}" style="max-width: 100%" />
-                <figcaption class="mt-2 text-secondary">With my wife <a href="https://jfgordon.net">Dr. Jennifer Farley Gordon</a></figcaption>
-            </figure>
+            <img src="{{ " /img/index/mg4-square.png" | prepend: site.baseurl }}" style="max-width: 400px" />
         </div>
     </div>
     <div class="row my-4">&nbsp;</div>
     <div class="row my-4">&nbsp;</div>
     <div class="row my-4">
         <div class="col-xl-6 col-xs-12 d-flex flex-column justify-content-center text-center">
-            <img src="{{ "/img/index/mg4-mg5.jpg" | prepend: site.baseurl }}" style="max-width: 100%" />
+            <img src="{{ " /img/index/mg4-mg5.jpg" | prepend: site.baseurl }}" style="max-width: 100%" />
         </div>
         <div class="col-xl-6 col-xs-12">
             <div class="border-0 card h-100 pt-4">
                 <h4 class="card-title text-center">What I do</h4>
                 <div class="card-body">
                     <p>
-                        <b>Analyze.</b> I can help you diagnose stubborn problems, and provide thoughtful and succinct analysis in presentations and writing.
+                        <b>Analyze.</b> I can help you diagnose stubborn problems, and provide thoughtful and succinct
+                        analysis in presentations and writing.
                     </p>
                     <p>
-                        <b>Execute.</b> I can help you turn audacious ideas into working software. I'm frequently asked to lead high-risk, high-reward, strategic projects that require rapid implementation in order to get feedback from users.
+                        <b>Execute.</b> I can help you turn audacious ideas into working software. I'm frequently asked
+                        to lead high-risk, high-reward, strategic projects that require rapid implementation in order to
+                        get feedback from users.
                     </p>
                     <p>
-                        <b>Guide.</b> I can be a sounding board for you, and offer a broad, alternative perspective on both technical and non-technical concerns. I'm able to ask questions in an empathetic way and take my ego out of the equation. When the opportunity arises, I deeply enjoy mentoring people one-on-one, and empowering them to move beyond me.
+                        <b>Guide.</b> I can be a sounding board for you, and offer a broad, alternative perspective on
+                        both technical and non-technical concerns. I'm able to ask questions in an empathetic way and
+                        take my ego out of the equation. When the opportunity arises, I deeply enjoy mentoring people
+                        one-on-one, and empowering them to move beyond me.
                     </p>
                     <p>
-                        <b>Translate.</b> I'm eager to understand the needs and concerns of clients and customers, ideally by interacting directly with them. Instead of insisting that users speak the language of software, I learn how they talk about the challenges they face, and how to translate between that language and software requirements.
+                        <b>Translate.</b> I'm eager to understand the needs and concerns of clients and customers,
+                        ideally by interacting directly with them. Instead of insisting that users speak the language of
+                        software, I learn how they talk about the challenges they face, and how to translate between
+                        that language and software requirements.
                     </p>
                     <p>
-                        Since earning my PhD in computer science I've worked in industrial research, small product development companies, professional services firms, and academia. I have contributed to multiple early-stage startups and co-founded three of my own, one of which was acquired in 2022.
+                        Since earning my PhD in computer science I've worked in industrial research, small product
+                        development companies, professional services firms, and academia. I have contributed to multiple
+                        early-stage startups and co-founded three of my own, one of which was acquired in 2022.
                     </p>
                 </div>
             </div>
@@ -55,39 +63,59 @@ title: Home
                 <h6 class="card-subtitle text-center">in my professional life, and in the people I work with</h6>
                 <div class="card-body">
                     <p>
-                    <b>Communication.</b> The ability to communicate well – with words, images, dress, body language, and other means – is essential to success as a technologist. Code is a medium, too: "Programs must be written for people to read, and only incidentally for machines to execute." (Abelson)
-                    <p/>
+                        <b>Communication.</b> The ability to communicate well – with words, images, dress, body
+                        language, and other means – is essential to success as a technologist. Code is a medium, too:
+                        "Programs must be written for people to read, and only incidentally for machines to execute."
+                        (Abelson)
+                        <p />
                     <p>
-                    <b>Creativity.</b> I gravitate towards problems that have ambiguous requirements, non-obvious solutions, and visible impact. I enjoy thinking laterally and drawing on the breadth of my knowledge and experience.
-                    <p/>
+                        <b>Creativity.</b> I gravitate towards problems that have ambiguous requirements, non-obvious
+                        solutions, and visible impact. I enjoy thinking laterally and drawing on the breadth of my
+                        knowledge and experience.
+                        <p />
                     <p>
-                    <b>Determination.</b> My favorite professional experiences have involved working with people who are hungry for growth and continual improvement, don't shy away from hard problems, and see failure as an opportunity to learn.
-                    <p/>
+                        <b>Determination.</b> My favorite professional experiences have involved working with people who
+                        are hungry for growth and continual improvement, don't shy away from hard problems, and see
+                        failure as an opportunity to learn.
+                        <p />
                     <p>
-                    <b>Emotional intelligence.</b> It's possible to get by in the IT industry on technical skill alone, but it's not very effective. Interpersonal skills have a way of amplifying your impact – working on teams, serving clients and users – while a lack of those skills undermines your potential.
-                    <p/>
+                        <b>Emotional intelligence.</b> It's possible to get by in the IT industry on technical skill
+                        alone, but it's not very effective. Interpersonal skills have a way of amplifying your impact –
+                        working on teams, serving clients and users – while a lack of those skills undermines your
+                        potential.
+                        <p />
                     <p>
-                    <b>Humility.</b> Throughout my life I've sought out teachers, mentors, and colleagues whose knowledge, skill, and talent were a stark reminder that there is always room for improvement. Whenever I started to feel like a big fish in the pond, I knew it was time to find a bigger pond.
-                    <p/>
+                        <b>Humility.</b> Throughout my life I've sought out teachers, mentors, and colleagues whose
+                        knowledge, skill, and talent were a stark reminder that there is always room for improvement.
+                        Whenever I started to feel like a big fish in the pond, I knew it was time to find a bigger
+                        pond.
+                        <p />
                     <p>
-                    <b>Idiosyncrasy.</b> I am passionate about fashion history and vintage clothes. In my spare time I enjoy arranging flowers and photographing them. I like working with people who defy conventional expectations.
-                    <p/>
+                        <b>Idiosyncrasy.</b> I am passionate about fashion history and vintage clothes. In my spare time
+                        I enjoy arranging flowers and photographing them. I like working with people who defy
+                        conventional expectations.
+                        <p />
                     <p>
-                    <b><a href="https://en.wikipedia.org/wiki/Openness_to_experience">Openness</a>.</b> I am a lifelong learner and <a href="{{ "/favorite-books.html" | prepend: site.baseurl }}">avid reader</a>. I enjoy traveling and have lived in multiple countries.
-                    <p/>
+                        <b><a href="https://en.wikipedia.org/wiki/Openness_to_experience">Openness</a>.</b> I am a
+                        lifelong learner and <a href="{{ " /favorite-books.html" | prepend: site.baseurl }}">avid
+                            reader</a>. I enjoy traveling and have lived in multiple countries.
+                        <p />
                     <p>
-                    <b>Other focus.</b> <a href="/the-name-minor.html" | prepend: site.baseurl }}">I come from a family of doctors, teachers, and social workers.</a> We are people who help other people by teaching and healing. I've maintained the same ideals and focus in my work.
-                    <p/>
+                        <b>Other focus.</b> <a href="/the-name-minor.html" | prepend: site.baseurl }}">I come from a
+                            family of doctors, teachers, and social workers.</a> We are people who help other people by
+                        teaching and healing. I've maintained the same ideals and focus in my work.
+                        <p />
                 </div>
             </div>
         </div>
         <div class="col-xl-6 col-xs-12 d-flex flex-column justify-content-center text-center">
             <figure>
-                <img src="{{ "/img/index/tulip.png" | prepend: site.baseurl }}" style="max-height: 600px; max-width: 100%" />
-                <figcaption class="mt-4">Painting by <a href="https://en.wikipedia.org/wiki/Pierre-Joseph_Redout%C3%A9">Pierre-Joseph Redouté</a></figcaption>
+                <img src="{{ " /img/index/tulip.png" | prepend: site.baseurl }}"
+                    style="max-height: 600px; max-width: 100%" />
+                <figcaption class="mt-4">Painting by <a
+                        href="https://en.wikipedia.org/wiki/Pierre-Joseph_Redout%C3%A9">Pierre-Joseph Redouté</a>
+                </figcaption>
             </figure>
         </div>
     </div>
 </div>
-
-
