rework favorite-books.html

--- a/favorite-books.html
+++ b/favorite-books.html
@@ -11,18 +11,6 @@ title: Favorite books
 
     <div class="row">
         <div class="col-12">
-            <h3>Computer Science</h3>
-            <ul>
-                <li>Leonard Kleinrock: <i>Queueing Systems</i></li>
-                <li>David MacKay: <i>Information Theory, Inference, and
-                    Learning Algorithms</i></li>
-                <li>W. Richard Stevens: <i>Unix Network Programming</i></li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-12">
             <h3>Fiction</h3>
             <ul>
                 <li>Jane Austen: <i>Pride and Prejudice</i></li>
@@ -32,7 +20,7 @@ title: Favorite books
                 <li>Tom Robbins: <i>Even Cowgirls Get the Blues</i></li>
                 <li>Antoine de Saint-Exupery: <i>The Little Prince</i></li>
                 <li>Neal Stephenson: <i>Cryptonomicon</i>, The Baroque Cycle, <i>Snow
-                    Crash</i></li>
+                        Crash</i></li>
                 <li>Eiji Yoshikawa: <i>Musashi</i></li>
             </ul>
         </div>
@@ -40,29 +28,27 @@ title: Favorite books
 
     <div class="row">
         <div class="col-12">
-            <h3>History</h3>
+            <h3>Non-fiction</h3>
             <ul>
                 <li>Karen Armstrong: <i>The Great Transformation</i></li>
                 <li>Robert Caro: Multi-volume Lyndon Johnson biography</li>
                 <li>Richard Feynman: <i>Surely You're Joking, Mr. Feynman!</i></li>
                 <li>Jon Gertner: <i>The Idea Factory: Bell Labs and the Great Age of American Innovation</i></li>
                 <li>Michael Hiltzik: <i>Dealers of Lightning: Xerox PARC and the Dawn of the Computer Age</i></li>
+                <li>C.G. Jung: <i>Aspects of the Feminine</i>, <i>Aspects
+                        of the Masculine</i></li>
                 <li>John Keegan: <i>The Face of Battle</i></li>
+                <li>Leonard Kleinrock: <i>Queueing Systems</i></li>
                 <li>Steven Levy: <i>Hackers</i></li>
+                <li>David MacKay: <i>Information Theory, Inference, and
+                        Learning Algorithms</i></li>
                 <li>Robert K. Massie: <i>Dreadnought</i></li>
                 <li>John McPhee: <i>The Control of Nature</i></li>
+                <li>Neil Postman: <i>Amusing Ourselves to Death: Public Discourse in the Age of Show Business</i></li>
                 <li>Thomas Ricks: <i>The Generals: American Military Command from World War II to Today</i></li>
+                <li>W. Richard Stevens: <i>Unix Network Programming</i></li>
                 <li>Studs Terkel: <i>Working</i></li>
                 <li>Howard Zinn: <i>A People's History of the United States</i></li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-12">
-            <h3>Philosophy</h3>
-            <ul>
-                <li>Lao Tsu: <i>Tao Te Ching</i></li>
             </ul>
         </div>
     </div>
@@ -73,19 +59,10 @@ title: Favorite books
             <ul>
                 <li>Erich Fried</li>
                 <li>Nikki Giovanni</li>
+                <li>Lao Tsu: <i>Tao Te Ching</i></li>
                 <li>Pablo Neruda</li>
                 <li>Rainer Maria Rilke</li>
                 <li>Arthur Rimbaud</li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-12">
-            <h3>Psychology</h3>
-            <ul>
-                <li>C.G. Jung: <i>Aspects of the Feminine</i>, <i>Aspects
-                    of the Masculine</i></li>
             </ul>
         </div>
     </div>
