fix project links

--- a/projects/index.html
+++ b/projects/index.html
@@ -13,62 +13,66 @@ title: Projects
                 </div>
                 <div class="row mb-4 mt-4">
                     <h4 class="text-center"><u>Active</u></h4>
-                    {% include project-card.html
+                    <!-- {% include project-card.html
                         class="me-4"
                         href="https://annotize.ai/"
                         img_src="/img/projects/annotize.png"
                         subtitle="Analyze content using terms from your industry"
                         title="Annotize"
+                    %} -->
+                    {% include project-card.html
+                    class="me-4"
+                    href="https://kos-kit.github.io/"
+                    img_src="/img/projects/kos-kit.png"
+                    subtitle="A toolkit for working with Knowledge Organization Systems (KOSs) such as the UNESCO
+                    Thesaurus, the HASSET Thesaurus, and other systems defined in SKOS."
+                    title="KOS Kit"
                     %}
                     {% include project-card.html
-                        class="me-4"
-                        href="https://kos-kit.github.io/"
-                        img_src="/img/projects/kos-kit.png"
-                        subtitle="A toolkit for working with Knowledge Organization Systems (KOSs) such as the UNESCO Thesaurus, the HASSET Thesaurus, and other systems defined in SKOS."
-                        title="KOS Kit"
+                    class="me-4"
+                    href="https://github.com/graphs2go"
+                    img_src="/img/projects/snomed-ct-transformation/snomed-ct-53627009.svg"
+                    subtitle="Transform data from a variety of sources into knowledge graphs in Cypher and RDF"
+                    title="Graphs2go"
                     %}
                     {% include project-card.html
-                        class="me-4"
-                        href="https://github.com/graphs2go"
-                        img_src="/img/projects/snomed-ct-transformation/snomed-ct-53627009.svg"
-                        subtitle="Transform data from a variety of sources into knowledge graphs in Cypher and RDF"
-                        title="Graphs2go"
-                    %}
-                    {% include project-card.html
-                        href="https://diveintoschema.org"
-                        img_src="/img/projects/diveintoschema.org.png"
-                        subtitle="Exploring uses of schema.org types across the web"
-                        title="Dive Into Schema.org"
+                    href="https://minorg.github.io/diveintoschema.org/"
+                    img_src="/img/projects/diveintoschema.org.png"
+                    subtitle="Exploring uses of schema.org types across the web"
+                    title="Dive Into Schema.org"
                     %}
                 </div>
                 <div class="row mt-4">
                     <h4 class="text-center"><u>Inactive</u></h4>
                     {% include project-card.html
-                        class="me-4"
-                        href="/projects/searchsci.html"
-                        img_src="/img/projects/searchsci/searchsci-landing.png"
-                        subtitle="A web-based research experiment investigating the effects of cognitive bias on our consumption of information online"
-                        title="SearchSci"
+                    class="me-4"
+                    href="/projects/searchsci.html"
+                    img_src="/img/projects/searchsci/searchsci-landing.png"
+                    subtitle="A web-based research experiment investigating the effects of cognitive bias on our
+                    consumption of information online"
+                    title="SearchSci"
                     %}
                     {% include project-card.html
-                        class="me-4"
-                        href="https://github.com/minorg/twks"
-                        img_src="/img/projects/twks.png"
-                        subtitle="A provenance-aware RDF store"
-                        title="Tetherless World Knowledge Store"
+                    class="me-4"
+                    href="https://github.com/minorg/twks"
+                    img_src="/img/projects/twks.png"
+                    subtitle="A provenance-aware RDF store"
+                    title="Tetherless World Knowledge Store"
                     %}
                     {% include project-card.html
-                        class="me-4"
-                        href="https://www.ardenkirkland.com/work/portfolio/dressdiscover/"
-                        img_src="/img/projects/dressdiscover.png"
-                        subtitle="Visual workflow for cataloging cultural heritage objects, in collaboration with <a href=\"https://www.ardenkirkland.com\">Arden Kirkland</a>"
-                        title="DressDiscover"
+                    class="me-4"
+                    href="https://www.ardenkirkland.com/work/portfolio/dressdiscover/"
+                    img_src="/img/projects/dressdiscover.png"
+                    subtitle="Visual workflow for cataloging cultural heritage objects, in collaboration with <a
+                        href=\"https://www.ardenkirkland.com\">Arden Kirkland</a>"
+                    title="DressDiscover"
                     %}
                     {% include project-card.html
-                        href="https://paradicms.github.io"
-                        img_src="/img/projects/paradicms.png"
-                        subtitle="Linked Data-powered Collections Management System for archives, libraries, museums, and individuals"
-                        title="Paradicms"
+                    href="https://paradicms.github.io"
+                    img_src="/img/projects/paradicms.png"
+                    subtitle="Linked Data-powered Collections Management System for archives, libraries, museums, and
+                    individuals"
+                    title="Paradicms"
                     %}
                 </div>
             </div>
