--- a/projects/index.html
+++ b/projects/index.html
@@ -13,13 +13,6 @@ title: Projects
                 </div>
                 <div class="row mb-4 mt-4">
                     <h4 class="text-center"><u>Active</u></h4>
-                    <!-- {% include project-card.html
-                        class="me-4"
-                        href="https://annotize.ai/"
-                        img_src="/img/projects/annotize.png"
-                        subtitle="Analyze content using terms from your industry"
-                        title="Annotize"
-                    %} -->
                     {% include project-card.html
                     class="me-4"
                     href="https://kos-kit.github.io/"
@@ -34,6 +27,13 @@ title: Projects
                     img_src="/img/projects/snomed-ct-transformation/snomed-ct-53627009.svg"
                     subtitle="Transform data from a variety of sources into knowledge graphs in Cypher and RDF"
                     title="Graphs2go"
+                    %}
+                    {% include project-card.html
+                    class="me-4"
+                    href="https://towndex.github.io"
+                    img_src="/img/projects/towndex.png"
+                    subtitle="Synthesizing knowledge graphs from local government documents and generating static websites"
+                    title="Towndex"
                     %}
                 </div>
                 <div class="row mt-4">
