--- a/favorite-books.html
+++ b/favorite-books.html
@@ -35,8 +35,8 @@ title: Favorite books
                 <li>Richard Feynman: <i>Surely You're Joking, Mr. Feynman!</i></li>
                 <li>Jon Gertner: <i>The Idea Factory: Bell Labs and the Great Age of American Innovation</i></li>
                 <li>Michael Hiltzik: <i>Dealers of Lightning: Xerox PARC and the Dawn of the Computer Age</i></li>
-                <li>C.G. Jung: <i>Aspects of the Feminine</i>, <i>Aspects
-                        of the Masculine</i>, <i>Memories, Dreams, Reflections</i></li>
+                <li>C.G. Jung: <i>Aspects of the Feminine</i>; <i>Aspects
+                        of the Masculine</i>; <i>Memories, Dreams, Reflections</i></li>
                 <li>John Keegan: <i>The Face of Battle</i></li>
                 <li>Leonard Kleinrock: <i>Queueing Systems</i></li>
                 <li>Steven Levy: <i>Hackers</i></li>
